examples/test/testpolicy14660.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14660
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key2: value40
      key16: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value7
          key3: value12
      podSelector:
        matchLabels:
          key27: value45
          key44: value13
          key19: value11
